# papyrus-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLOUDFLARE_TUNNEL_FIX.md  CLOUDFLARE_TUNNEL_GUIDE.md  Dockerfile  EMBEDDER_DEBUGGING_REPORT.md  EMBEDDER_FIX_REPORT.md  Lower_Latency Plan.md  MIGRATION_REPORT.md  MULTI_USER_SERVER_PLAN.md  PRODUCTION_HARDENING_REPORT.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  SME_RAG_Presentation.pptx  USER_GUIDE.md  VALIDATION_COMPLETE.md  check_pdfs.py  check_status.py  check_wal.py  cli.py  debug_connection.py  debug_large_pdf.txt  debug_librarian_fail.txt  debug_output.txt  debug_output_after.txt  debug_rag_connection.py  debug_repro_file.py  debug_repro_json.py  docker-compose.dev.yml  docker-compose.yml  fix_indent.py  fix_indent_2.py  fix_indent_undo.py  fix_ui_calls.py  fix_ui_v2.py  migration_execution_log.json  mockup_ui.html  (+20 more)
.claude/: settings.local.json
.github/: dependabot.yml
.serena/: project.yml
.streamlit/: config.toml
.templates/: Caddyfile  cloudflared-config.yml  config.yaml.template
app/: auth_helper.py  main.py
config/: acquisition_config.yaml  cloudflared-config.yml  config.yaml  docker_config.yaml  prompts.yaml
docker/: Dockerfile.base
docs/: LIVE_MONITOR_DESIGN.md  PIPELINE_SPECIFICATION.md  USER_CONTROL_GUIDE.md
documentation/: API_REFERENCE.md  ARCHITECTURE.md  CI_CD_GUIDE.md  CONFIGURATION.md  DATA_FLOWS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  INCIDENT_RESPONSE.md  QUERY_WORKFLOW.md  README.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: analyze_metadata_coverage.py  audit_apa.py  autonomous_update.py  backup.sh  build_bm25_tantivy.py  check_chunked.py  check_cuda.py  check_gpu.py  check_live_status.py  check_qdrant_methods.py  check_query_signature.py  db_stats.py  (+42 more)
(+288 files in other folders)
